// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Variants should render modular-centered tabs 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
  variant="modular-centered"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs Variants should render modular-left-aligned tabs 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
  variant="modular-left-aligned"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs Variants should render structural tabs 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
  variant="structural"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render a controlled component when onChange and activeKey are set 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render a default component 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render an uncontrolled component when defaultActiveKey is set 1`] = `
<ContentContainer
  className="tabs-container structural"
  defaultKey="default"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render with content filled when indicated 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={true}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content fill-parent"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render with tabs filled when indicated 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
  tabsFill={true}
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should set custom props 1`] = `
<ContentContainer
  className="tabs-container structural customClass"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should set custom props for child Tab Pane 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      defaultElement={
        <CollapsedTabs
          activeKey="default"
          onTruncationChange={[Function]}
        >
          <TabPane
            aria-selected={true}
            className="is-active customClass"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsedTabs>
      }
      responsiveTo="parent"
      tiny={
        <CollapsibleTabs
          activeIndex={0}
          activeKey="default"
          onChange={[Function]}
          onTruncationChange={[Function]}
          variant="structural"
        >
          <TabPane
            aria-selected={true}
            className="is-active customClass"
            isDisabled={false}
            isIconOnly={false}
            label="Default"
            onClick={[Function]}
          />
        </CollapsibleTabs>
      }
    />
  }
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;
